<resources>
    <string name="app_name">DashboardDesign</string>
    <string name="today">Today</string>
    <string name="settings">Settings</string>
    <string name="good_morning_espresso">Good Morning Espresso</string>
    <string name="search">Search</string>
    <string name="diet_chart">Diet Chart</string>
    <string name="exercise">Exercise</string>
    <string name="meditation">Meditation</string>
    <string name="yoga">Yoga</string>
</resources>
