<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bottom_navigation" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/header_background"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/colorSemiDark"
                app:layout_constraintBottom_toBottomOf="@id/imageHeader"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/menu_background"
                android:contentDescription="@string/app_name"
                android:padding="7dp"
                android:src="@drawable/ic_menu"
                android:tint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textGoodMoring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/good_morning_espresso"
                android:textColor="@color/colorWhite"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/imageMenu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/search_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="4dp"
                app:layout_constraintTop_toBottomOf="@id/textGoodMoring">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="6dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_search" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <View
                android:id="@+id/viewSupporter"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="@id/imageHeader"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDietChart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@id/cardMeditation"
                app:layout_constraintEnd_toStartOf="@id/cardExercise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewSupporter">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/diet" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/diet_chart"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardExercise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cardDietChart"
                app:layout_constraintTop_toTopOf="@id/viewSupporter">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/exercise" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/exercise"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMeditation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toStartOf="@id/cardYoga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardDietChart">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/meditation" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/meditation"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardYoga"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cardMeditation"
                app:layout_constraintTop_toBottomOf="@id/cardDietChart">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/yoga" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/yoga"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>